# wildmeshing-python

./: .gitignore  CMakeLists.txt
cmake/recipes/: ftetwild.cmake  triwild.cmake  wildmeshing_data.cmake
cmake/wildmeshing/: wildmeshing_filter_flags.cmake  wildmeshing_use_colors.cmake  wildmeshing_warnings.cmake
src/: Utils.cpp  binding.cpp  tetrahedralize.cpp  tetrahedralize.hpp  triangulate.hpp  triangulate_data.hpp
test/: tet_test.py  tri_test.py
